# jbd

./: .bumpver.toml  .gitignore  README.md  main.py  pyproject.toml
app/api/: app_factory.py  dependencies.py  error_handler.py  include_routes.py  web_client.py
app/api/routes/: analyze_routes.py  download_routes.py  health_routes.py  settings_routes.py  websocket_routes.py
app/enums/: __init__.py  bitrate_enum.py  format_enum.py  response_type.py
app/errors/: __init__.py  app_errors.py  base_error.py
app/managers/: __init__.py  download_album_manager.py  download_api_manager.py
app/schemas/: __init__.py  album_response.py  audio_file_schema.py  download_request_schema.py  playlist_schema.py  song_schema.py  track_schema.py
app/services/: __init__.py  cover_service.py  download_service.py  lrclib_service.py  parse_service.py  tag_service.py  youtube_service.py
app/settings/: __init__.py  app_logs.py  app_settings.py  load_settings.py
dev/: album.json  get_from_playlist.py  get_song_from_id.py  playlist.json  song.json
frontend/: package-lock.json  package.json
frontend/src/: App.ts  App.vue  style.css
frontend/src/api/: client.ts  schema.d.ts
frontend/src/components/analysis/: AlbumCard.ts  AlbumCard.vue  SearchHandler.ts  SearchHandler.vue  TrackItem.ts  TrackItem.vue
frontend/src/components/download/: DownloadProgress.ts  DownloadProgress.vue  LogViewer.ts  (+5 more)
frontend/src/logic/: DownloadManager.ts
frontend/src/services/: AnalysisService.ts  DownloadService.ts  SettingsService.ts  WebSocketService.ts
frontend/src/views/: SettingsView.ts
(+4 files in other folders)
