[project]
name = "jbd"
version = "0.1.0"
description = "Servicio de descargas de YoutubeMusic"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.2",
    "mutagen>=1.47.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "requests>=2.33.1",
    "uvicorn[standard]>=0.42.0",
    "websockets>=16.0",
    "yt-dlp>=2026.3.17",
    "ytmusicapi>=1.11.5",
]

[dependency-groups]
dev = [
    "bumpver>=2025.1131",
]
